<resources>
    <string name="app_name">ecollecter</string>
    <string name="fill_the_fields_to_sign_in">Fill the fields to Sign in</string>
    <string name="username">Username</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camerax_rear_camera_target_resolution" translatable="false">crctas</string>
    <string name="pref_key_camerax_front_camera_target_resolution" translatable="false">cfctas</string>
    <string name="pref_key_live_preview_object_detector_enable_multiple_objects" translatable="false">lpodemo</string>
    <string name="pref_key_still_image_object_detector_enable_multiple_objects" translatable="false">siodemo</string>
    <string name="pref_key_still_image_object_detector_enable_classification" translatable="false">siodec</string>
    <string name="pref_key_live_preview_object_detector_enable_classification" translatable="false">lpodec</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>

    <!-- Strings for info preference. -->
    <string name="pref_title_info_hide" translatable="false">Hide detection info</string>
    <string name="pref_key_info_hide" translatable="false">ih</string>
    <string name="please_scan_the_top_digital_number_or_fill_the_current_consumption_manually">Please scan the top digital number or fill the current consumption manually</string>
    <string name="current_consumption_000000_kw">Current Consumption:000000 KW</string>
</resources>